{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 7,
  "lineage": "4cfa3c42-a608-0fb8-6a1d-de69126745b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0129865974a10c1cb",
            "arn": "arn:aws:ec2:us-east-1:783764605244:instance/i-0e8a3f2bd65b00049",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8a3f2bd65b00049",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nishant",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0853e3ea062e57023",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a77bcf5fb001f04c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09271e2f69b8716ef",
            "tags": {
              "Name": "nishant-ec2"
            },
            "tags_all": {
              "Name": "nishant-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c222b9544ce14cc"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.nishant_subnet",
            "aws_vpc.nishant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nishant_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764605244:internet-gateway/igw-04fe0eb80d87caebd",
            "id": "igw-04fe0eb80d87caebd",
            "owner_id": "783764605244",
            "tags": {
              "Name": "nishant-igw"
            },
            "tags_all": {
              "Name": "nishant-igw"
            },
            "vpc_id": "vpc-0e4ac69ab845580ec"
          },
          "dependencies": [
            "aws_vpc.nishant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nishant_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-051cef874d2fccd22",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fe0eb80d87caebd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nishant-route-table"
            },
            "tags_all": {
              "Name": "nishant-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4ac69ab845580ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nishant_igw",
            "aws_vpc.nishant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764605244:security-group/sg-09c222b9544ce14cc",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c222b9544ce14cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "783764605244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-access"
            },
            "tags_all": {
              "Name": "ssh-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4ac69ab845580ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nishant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nishant_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764605244:subnet/subnet-09271e2f69b8716ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09271e2f69b8716ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764605244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nishant-subnet"
            },
            "tags_all": {
              "Name": "nishant-subnet"
            },
            "vpc_id": "vpc-0e4ac69ab845580ec"
          },
          "dependencies": [
            "aws_vpc.nishant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nishant_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:783764605244:vpc/vpc-0e4ac69ab845580ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035e6abd72b6c3df6",
            "default_route_table_id": "rtb-0f183936a26bbdf93",
            "default_security_group_id": "sg-01ed5810d01f1b7ed",
            "dhcp_options_id": "dopt-0af1e494ea0758ce1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4ac69ab845580ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f183936a26bbdf93",
            "owner_id": "783764605244",
            "tags": {
              "Name": "nishant-vpc"
            },
            "tags_all": {
              "Name": "nishant-vpc"
            }
          }
        }
      ]
    }
  ]
}